added assets to play scene

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rithom (TBD)</title>
     <style>html{
-        background-color: #283577;
+        background-color: #3f142d8a;
     }</style>
 </head>
 <body>
