--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rithom (TBD)</title>
+    <title>Breath</title>
     <style>html{
         background-color: #3f142d8a;
     }</style>
