--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <script src="lib/phaser.js"></script>
     <script src="src/scenes/Menu.js"></script>
-    <script src="src/scenes/Play.js"></script>
+    <script src="src/scenes/Level_1.js"></script>
+    <script src="src/scenes/Level_2.js"></script>
+    <script src="src/scenes/Level_3.js"></script>
     <script src="src/scenes/GameOver.js"></script>
     <script src="src/main.js"></script>
 </body>
