--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <script src="src/scenes/Level_1.js"></script>
     <script src="src/scenes/Level_2.js"></script>
     <script src="src/scenes/Level_3.js"></script>
+    <script src="src/scenes/Level_4.js"></script>
+    <script src="src/scenes/Level_5.js"></script>
+    <script src="src/scenes/Level_6.js"></script>
+    <script src="src/scenes/Level_7.js"></script>
+    <script src="src/scenes/Level_8.js"></script>
     <script src="src/scenes/GameOver.js"></script>
     <script src="src/main.js"></script>
 </body>
