--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <script src="lib/phaser.js"></script>
     <script src="src/scenes/Menu.js"></script>
+    <script src="src/scenes/Level.js"></script>
     <script src="src/scenes/Level_1.js"></script>
     <script src="src/scenes/Level_2.js"></script>
     <script src="src/scenes/Level_3.js"></script>
