--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="src/scenes/Level_7.js"></script>
     <script src="src/scenes/Level_8.js"></script>
     <script src="src/scenes/GameOver.js"></script>
+    <script src="src/scenes/Credits.js"></script>
     <script src="src/main.js"></script>
 </body>
 </html>
